--- a/blog/23.12/2023-12-20-도달도달.md
+++ b/blog/23.12/2023-12-20-도달도달.md
@@ -499,6 +499,6 @@ WHERE m.id = 1 AND *DATE*(ccT.created_at) = *CURDATE*();
 ```
 
 ## 마무리
-나름 재미있었다. 회사에서 맨날 하는 데이터베이스 설계를 새로운 도메인(?) 요구사항을 받아서 같이 이야기 하면서 완성해 나가는 재미가 확실히 있다. 완성한 프로젝트는  [도달도달 - 1:1 매칭 목표 달성 서비스](https://dodaldodal-frontend.vercel.app/login) 에서 확인할 수 있다. 역시, 데이터베이스 설계는 마치 책장을 만드는 것과 비슷한 것 같다.
-이 글은 세모난 책장을 네모로 펴가는 이야기이다.
----
+
+나름 재미있었다. 회사에서 맨날 하는 데이터베이스 설계를 새로운 도메인(?) 요구사항을 받아서 같이 이야기 하면서 완성해 나가는 재미가 확실히 있다. 완성한 프로젝트는  [도달도달 - 1:1 매칭 목표 달성 서비스](https://dodaldodal-frontend.vercel.app/login) 에서 확인할 수 있다.
+
