:sparkles: 블로그 구조 정리

--- a/docs/service/dodal-dodal/2023-12-21-도달도달.md
+++ b/docs/service/dodal-dodal/2023-12-21-도달도달.md
@@ -5,7 +5,7 @@ sidebar_position: 1
 ## 데이터베이스만 참여하게 된 이야기
 간단하게 정의하자면 도달도달은 1 : 1 목표 달성 챌린지이다. 내가 프로젝트에 참여한 것은 아니고 어쩌다 보니 데이터베이스 일부분만 간접적으로 참여하게 되었다. ‘숨겨진 멤버’ 이런 느낌이다.
 
-![](./img/01.png)<!-- {"width":654} -->
+![](img/01.png)<!-- {"width":654} -->
 형욱님이 팀원 중 백엔드 하시는 분이 설계해온 테이블이라고 봐달라고 했다.
 
 “와우”
